Added Flights Page and made changes to other files

--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -9,3 +9,20 @@ websiteURL=https://www.easemytrip.com/
 filePath = /src/test/resources/objectrepository/FlightDetails.xlsx
 readSheetName = Sheet1
 writeSheetName = Sheet2
+
+#HomePage locators
+
+linkToFlightPage_xpath = //span[@class='icn_ttl'][contains(text(),'flights')]
+
+#FlghtPage locators
+
+oneWayLink_xpath = //label[text()='One Way']
+from_xpath = //span[@id='lblDeparture']
+fromInput_xpath = //input[@id='FromSector1']
+dest_nm_xpath=//ul[@id='mobFromhtml']//div[@class='dest-nm']//span[1]
+
+to_xpath = //span[@id='lblArrival']
+toInput_xpath = //input[@id='Editbox14']
+dest_nm_to_xpath=//ul[@id='mobTohtml']//div[@class='dest-nm']//span[1]
+
+month_xpath = //div[@class='mon-tit']
