--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -1,4 +1,4 @@
-browserName=chrome
+browserName=firefox
 
 chromeDriver=/src/test/resources/drivers/chromedriver
 firefoxDriver=/src/test/resources/drivers/geckodriver
