Integrated reading and writing from/to excel sheets respectively

--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -7,5 +7,15 @@ safariDriver=/src/test/resources/drivers/safaridriver
 websiteURL=https://www.easemytrip.com/
 
 filePath = /src/test/resources/objectrepository/FlightDetails.xlsx
-readSheetName = Sheet1
-writeSheetName = Sheet2
+readSheetName = Search
+writeSheetName = Flights
+
+#HomePage locators
+
+fromInput_id = FromSector_show
+toInput_id = Editbox13_show
+Travellerdropddown_xpath = //*[@id=\"frmHome\"]/div[5]/div[2]/div[3]/div[1]/div[5]/div/a/span
+
+travelClass_xpath = //a[@class='dropbtn_n10']//span[@class='optclass-name']
+tripDoneBtn_xpath = //a[@id='tripType']
+searchBtn_xpath = //*[@id='search']//input
