Added dataprovider for Test Case Searchflights

--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -1,10 +1,11 @@
 browserName=firefox
 
-chromeDriver=/src/test/resources/drivers/chromedriver
-firefoxDriver=/src/test/resources/drivers/geckodriver
-safariDriver=/src/test/resources/drivers/safaridriver
+chromeDriver=/src/test/resources/drivers/mac/chromedriver
+firefoxDriver=/src/test/resources/drivers/mac/geckodriver
+#safariDriver=/src/test/resources/drivers/safaridriver
 
 websiteURL=https://www.easemytrip.com/
+pageTitle=Book Flights, Hotels, Bus Tickets & Holidays - EaseMyTrip.com
 
 filePath = /src/test/resources/objectrepository/FlightDetails.xlsx
 readSheetName = Search
@@ -19,3 +20,14 @@ Travellerdropddown_xpath = //*[@id=\"frmHome\"]/div[5]/div[2]/div[3]/div[1]/div[
 travelClass_xpath = //a[@class='dropbtn_n10']//span[@class='optclass-name']
 tripDoneBtn_xpath = //a[@id='tripType']
 searchBtn_xpath = //*[@id='search']//input
+
+Adultminus_xpath = //*[@id=\"myDropdown_n\"]/div/div[1]/div[2]/div/div[1]/input
+Adultplus_xpath = //*[@id=\"myDropdown_n\"]/div/div[1]/div[2]/div/div[3]/input
+
+Childrenvalue_id = optChild
+Childrenplus_xpath = //*[@id=\"myDropdown_n\"]/div/div[2]/div[2]/div/div[3]/input
+
+infantsvalue_id = optInfant
+infantsplus_xpath = //*[@id='myDropdown_n']/div/div[3]/div[2]/div/div[3]/input
+
+
