Added screenshots ability

--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -11,6 +11,8 @@ filePath = /src/test/resources/objectrepository/FlightDetails.xlsx
 readSheetName = Search
 writeSheetName = Flights
 
+screenshotsPath = /src/test/resources/screenshots/
+
 #HomePage locators
 
 fromInput_id = FromSector_show
