Refactored Homepage, updated screenshots file names

--- a/EaseMyTrip/src/test/resources/objectrepository/config.properties
+++ b/EaseMyTrip/src/test/resources/objectrepository/config.properties
@@ -23,13 +23,22 @@ travelClass_xpath = //a[@class='dropbtn_n10']//span[@class='optclass-name']
 tripDoneBtn_xpath = //a[@id='tripType']
 searchBtn_xpath = //*[@id='search']//input
 
+Adultvalue_id = optAdult
 Adultminus_xpath = //*[@id=\"myDropdown_n\"]/div/div[1]/div[2]/div/div[1]/input
 Adultplus_xpath = //*[@id=\"myDropdown_n\"]/div/div[1]/div[2]/div/div[3]/input
 
 Childrenvalue_id = optChild
+Childrenminus_xpath = //*[@id=\"myDropdown_n\"]/div/div[2]/div[2]/div/div[1]/input
 Childrenplus_xpath = //*[@id=\"myDropdown_n\"]/div/div[2]/div[2]/div/div[3]/input
 
 infantsvalue_id = optInfant
+infantsminus_xpath = //*[@id=\"myDropdown_n\"]/div/div[3]/div[2]/div/div[1]/input
 infantsplus_xpath = //*[@id='myDropdown_n']/div/div[3]/div[2]/div/div[3]/input
 
+travelerDone_xpath = //*[@id='traveLer']
+
+departureDate_id = ddate
+labelMonth1_xpath = //div[@class='box']//div[@class='month']
+labelMonth2_xpath = //div[@class='box1']//div[@class='month2']
+nextMonth_id = img2Nex
 
